--- a/STITCH/services/mongodb-atlas/config.json
+++ b/STITCH/services/mongodb-atlas/config.json
@@ -1,9 +1,9 @@
 {
-    "id": "5e5d60ad28f46cd242eb6e6d",
+    "id": "5e5f9d612e6039c1c3b8fe1a",
     "name": "mongodb-atlas",
     "type": "mongodb-atlas",
     "config": {
-        "clusterName": "Cluster0",
+        "clusterName": "Example",
         "readPreference": "primary",
         "wireProtocolEnabled": false
     },
